2008-08-05  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/HttpDownloadManager.cpp:

    No need to clear just constructed containers.

2008-08-05  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/HttpDownloadManager.cpp:

    Coding style cleanup.

2008-08-05  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/HttpDownloadManager.cpp:
    * src/lib/HttpDownloadManager.h:

    Change container type of m_jobQueue from QQueue to QStack which
    has the advantage that tiles of the current visited area are
    loaded first.
    This is noticable if you scroll and zoom a lot or if the internet
    connection is slower than DSL like GPRS/EDGE or even 3G GSM.

2008-08-04  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/MarbleWidgetInputHandler.cpp:

    Coding style fix, change C-style cast into dynamic_cast, thanks
    to Dennis Nienhüser for pointing that out.

2008-08-04  Inge Wallin  <inge@lysator.liu.se>

	* src/lib/geodata/data/GeoDataGeometry.cpp (unpack): Bugfix
	(GeoDataGeometry): Init in right order.
	* src/lib/geodata/data/GeoDataPoint.cpp (GeoDataPoint): Init in right order

2008-08-04  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/PlaceMarkManager.cpp:

    Coding style changes.

2008-08-04  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/geodata/handlers/osm-namefinder/NamedTagHandler.cpp:

    OpenstreetMap name finder returns coordinates in degree.

2008-08-04  Patrick Spendrin    <ps_ml@gmx.de>

    * src/lib/geodata/data/GeoDataStyleMap.{h|cpp}
    * src/lib/geodata/data/GeoDataFeature.{h|cpp}
    * src/lib/geodata/handlers/kml/KmlStyleMapTagHandler.{h|cpp}
    * src/lib/geodata/handlers/kml/KmlKeyTagHandler.{h|cpp}
    * src/lib/geodata/handlers/kml/KmlStyleUrlTagHandler.{h|cpp}
    * src/lib/geodata/handlers/kml/KmlPairTagHandler.{h|cpp}

    implementing the kml styleMap

    * src/lib/geodata/data/GeoDataCoordinates.h
    * src/lib/geodata/data/GeoDataDocument.h
    * src/lib/geodata/data/GeoDataGeometry.h