@@ -2,6 +2,12 @@
 
     * src/lib/HttpDownloadManager.cpp:
 
+    Coding style, don't create so many temporary objects.
+
+2008-08-05  Jens-Michael Hoffmann  <jensmh@gmx.de>
+
+    * src/lib/HttpDownloadManager.cpp:
+
     No need to clear just constructed containers.
 
 2008-08-05  Jens-Michael Hoffmann  <jensmh@gmx.de>
